# Algorithms-C

./: .gitignore  CMakeLists.txt
sorting/: insertion_sort.c  insertion_sort.h  makefile
sorting/src/: CMakeLists.txt  bubble_sort.c  heap_sort.c  insertion_sort.c  insertion_sort.h  intro_sort.c  merge_sort.c  quick_sort.c  selection_sort.c  tree_sort.c
sorting/src/headers/: bubble_sort.h  common.h  heap_sort.h  insertion_sort.h  intro_sort.h  merge_sort.h  quick_sort.h  selection_sort.h  tree_sort.h
sorting/test/: CMakeLists.txt  test_correctness  test_correctness.c
